--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,17 +72,17 @@
 
             // Lightness values matching the neutral hex grays in colors.css
             var steps = [
-                ['--color-gray-950', 4],
-                ['--color-gray-900', 10],
-                ['--color-gray-800', 18],
-                ['--color-gray-700', 25],
-                ['--color-gray-600', 32],
-                ['--color-gray-500', 44],
-                ['--color-gray-400', 54],
-                ['--color-gray-300', 69],
-                ['--color-gray-200', 82],
-                ['--color-gray-100', 88],
-                ['--color-gray-50', 96]
+                ['--color-base-950', 4],
+                ['--color-base-900', 10],
+                ['--color-base-800', 18],
+                ['--color-base-700', 25],
+                ['--color-base-600', 32],
+                ['--color-base-500', 44],
+                ['--color-base-400', 54],
+                ['--color-base-300', 69],
+                ['--color-base-200', 82],
+                ['--color-base-100', 88],
+                ['--color-base-50', 96]
             ];
 
             var root = document.documentElement;
