--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,6 +95,106 @@
             }
         })();
     </script>
+    <script>
+        // Apply custom accent colors from localStorage to prevent FOUC.
+        // IMPORTANT: The hex→HSL→hex conversion and offset tables are duplicated from
+        // frontend/src/utils/accentColor.ts. Keep both in sync.
+        (function() {
+            var accentLight = localStorage.getItem('app-accent-color-light') || '';
+            var accentDark = localStorage.getItem('app-accent-color-dark') || '';
+            if (!accentLight && !accentDark) return;
+
+            var theme = document.documentElement.getAttribute('data-theme') || 'light';
+
+            function hexToRgb(hex) {
+                return {
+                    r: parseInt(hex.slice(1, 3), 16),
+                    g: parseInt(hex.slice(3, 5), 16),
+                    b: parseInt(hex.slice(5, 7), 16)
+                };
+            }
+
+            function hexToHsl(hex) {
+                var r = parseInt(hex.slice(1, 3), 16) / 255;
+                var g = parseInt(hex.slice(3, 5), 16) / 255;
+                var b = parseInt(hex.slice(5, 7), 16) / 255;
+                var max = Math.max(r, g, b), min = Math.min(r, g, b);
+                var l = (max + min) / 2;
+                if (max === min) return { h: 0, s: 0, l: l * 100 };
+                var d = max - min;
+                var s = l > 0.5 ? d / (2 - max - min) : d / (max + min);
+                var h = 0;
+                if (max === r) h = ((g - b) / d + (g < b ? 6 : 0)) / 6;
+                else if (max === g) h = ((b - r) / d + 2) / 6;
+                else h = ((r - g) / d + 4) / 6;
+                return { h: Math.round(h * 360), s: Math.round(s * 100), l: Math.round(l * 100) };
+            }
+
+            function hslToHex(h, s, l) {
+                var sN = s / 100, lN = l / 100;
+                var c = (1 - Math.abs(2 * lN - 1)) * sN;
+                var x = c * (1 - Math.abs((h / 60) % 2 - 1));
+                var m = lN - c / 2;
+                var r1 = 0, g1 = 0, b1 = 0;
+                if (h < 60) { r1 = c; g1 = x; }
+                else if (h < 120) { r1 = x; g1 = c; }
+                else if (h < 180) { g1 = c; b1 = x; }
+                else if (h < 240) { g1 = x; b1 = c; }
+                else if (h < 300) { r1 = x; b1 = c; }
+                else { r1 = c; b1 = x; }
+                function toHex(v) {
+                    var hex = Math.round((v + m) * 255).toString(16);
+                    return hex.length === 1 ? '0' + hex : hex;
+                }
+                return '#' + toHex(r1) + toHex(g1) + toHex(b1);
+            }
+
+            // Light palette offsets: 700=-8, 600=0, 500=+10, 400=+20, 300=+32
+            // Dark palette offsets: 700=-14, 600=-7, 500=0, 400=+7, 300=+15, 200=+27
+            function applyShades(hex, offsets) {
+                var hsl = hexToHsl(hex);
+                var root = document.documentElement;
+                for (var token in offsets) {
+                    var adjusted = Math.min(95, Math.max(5, hsl.l + offsets[token]));
+                    root.style.setProperty(token, hslToHex(hsl.h, hsl.s, adjusted));
+                }
+            }
+
+            if (accentLight) {
+                applyShades(accentLight, {
+                    '--color-accent-light-700': -8,
+                    '--color-accent-light-600': 0,
+                    '--color-accent-light-500': 10,
+                    '--color-accent-light-400': 20,
+                    '--color-accent-light-300': 32
+                });
+                if (theme === 'light') {
+                    var rgb = hexToRgb(accentLight);
+                    document.documentElement.style.setProperty(
+                        '--color-accent-bg',
+                        'rgba(' + rgb.r + ', ' + rgb.g + ', ' + rgb.b + ', 0.1)'
+                    );
+                }
+            }
+            if (accentDark) {
+                applyShades(accentDark, {
+                    '--color-accent-dark-700': -14,
+                    '--color-accent-dark-600': -7,
+                    '--color-accent-dark-500': 0,
+                    '--color-accent-dark-400': 7,
+                    '--color-accent-dark-300': 15,
+                    '--color-accent-dark-200': 27
+                });
+                if (theme === 'dark') {
+                    var rgb = hexToRgb(accentDark);
+                    document.documentElement.style.setProperty(
+                        '--color-accent-bg',
+                        'rgba(' + rgb.r + ', ' + rgb.g + ', ' + rgb.b + ', 0.15)'
+                    );
+                }
+            }
+        })();
+    </script>
 </head>
 
 <body>
