--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,37 +37,37 @@
             document.documentElement.className = theme;
 
             // Migrate old single-value palette keys to per-theme keys.
-            var oldTone = localStorage.getItem('app-palette-tone');
-            if (oldTone !== null) {
+            var oldSaturation = localStorage.getItem('app-palette-saturation');
+            if (oldSaturation !== null) {
                 var oldHue = localStorage.getItem('app-palette-hue') || '0';
                 var oldBrightness = localStorage.getItem('app-palette-brightness') || '0';
                 // Copy old values to both light and dark keys if not already set.
-                if (localStorage.getItem('app-palette-tone-light') === null) {
+                if (localStorage.getItem('app-palette-saturation-light') === null) {
                     localStorage.setItem('app-palette-hue-light', oldHue);
-                    localStorage.setItem('app-palette-tone-light', oldTone);
+                    localStorage.setItem('app-palette-saturation-light', oldSaturation);
                     localStorage.setItem('app-palette-brightness-light', oldBrightness);
                 }
-                if (localStorage.getItem('app-palette-tone-dark') === null) {
+                if (localStorage.getItem('app-palette-saturation-dark') === null) {
                     localStorage.setItem('app-palette-hue-dark', oldHue);
-                    localStorage.setItem('app-palette-tone-dark', oldTone);
+                    localStorage.setItem('app-palette-saturation-dark', oldSaturation);
                     localStorage.setItem('app-palette-brightness-dark', oldBrightness);
                 }
                 // Remove old keys.
                 localStorage.removeItem('app-palette-hue');
-                localStorage.removeItem('app-palette-tone');
+                localStorage.removeItem('app-palette-saturation');
                 localStorage.removeItem('app-palette-brightness');
             }
 
             // Read per-theme palette values for the resolved theme.
-            var tone = parseInt(localStorage.getItem('app-palette-tone-' + theme), 10) || 0;
+            var saturation = parseInt(localStorage.getItem('app-palette-saturation-' + theme), 10) || 0;
             var brightness = parseInt(localStorage.getItem('app-palette-brightness-' + theme), 10) || 0;
             // Only apply when palette customization is active.
-            if (tone <= 0 && brightness === 0) return;
+            if (saturation <= 0 && brightness === 0) return;
 
             var hue = parseInt(localStorage.getItem('app-palette-hue-' + theme), 10) || 0;
             var maxSat = 20;
             var maxBrightnessOffset = 10;
-            var saturation = (tone / 100) * maxSat;
+            var saturation = (saturation / 100) * maxSat;
             var lightnessOffset = (brightness / 50) * maxBrightnessOffset;
 
             // Lightness values matching the neutral hex grays in colors.css
